--- a/README.Rmd
+++ b/README.Rmd
@@ -30,6 +30,11 @@ devtools::install_github("evanmascitti/diRtscience")
 
 This package contains consise functions to analyze laboratory soil test data. The code was developed by Evan Mascitti while earning his PhD at Penn State. The package encompasses several commonly performed tests (including particle size analysis, Proctor maximum density, and Atterberg limits) and specialized analyses that were developed specifically for this project. Examples include morphometric analyses of 3D soil surfaces and numerical integration of stress-strain curves derived from unconfined compression tests. 
 
+<!-- The best way to learn about this package is through the vignettes  -->
+<!-- un-comment this line once the vignettes are added  -->
+
+The function `sandClay.mixCalcs` is supplied for generating the air-dry masses of soil which should be used when batch-blending sand-clay mixtures.
+
 The soil which may be deployed using this package include: 
 
 #### Particle size analysis
