added badges to README, `proctor_fit()`, and `add_w()`. Fixed formatting in `add_w` documentation.

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,9 +16,11 @@ knitr::opts_chunk$set(
 # diRtscience
 
 <!-- badges: start -->
+[![Lifecycle: maturing](https://img.shields.io/badge/lifecycle-maturing-blue.svg)](https://www.tidyverse.org/lifecycle/#maturing)
 <!-- badges: end -->
 
 ## Note: I am still in the process of tweaking a few functions. The package should be fully updated by Nov 1. 2020 .
+
 
 ## Installation
 
