--- a/README.Rmd
+++ b/README.Rmd
@@ -24,21 +24,20 @@ knitr::opts_chunk$set(
 
 ## Installation
 
-An official version of `diRtscience` is not yet available on CRAN. However, you can install it with the `devtools` package
-by using the command:
+An official version of `diRtscience` is not yet available on CRAN. However, if you have the `devtools` package, you can install `diRtscience` with the command:
 
 ``` r
 devtools::install_github("evanmascitti/diRtscience")
 ```
 
-This package contains concise functions to analyze laboratory soil test data. I wrote this package for my own use but other soil scientists may find it useful. The code encompasses several commonly performed tests (including particle size analysis, Proctor maximum density, and Atterberg limits) and specialized analyses that were developed specifically for this project. Examples include 3D morphometric analyses of soil surfaces and numerical integration of stress-strain curves derived from unconfined compression tests. 
+This package contains concise functions to analyze laboratory soil test data. I wrote this package for my own use but other soil scientists may find it of value. The code encompasses several commonly performed tests (including particle size analysis, Proctor maximum density, and Atterberg limits) and specialized analyses that were developed specifically for this project. Examples include 3D morphometric analyses of soil surfaces and numerical integration of stress-strain curves derived from unconfined compression tests. 
 
 <!-- The best way to learn about this package is through the vignettes  -->
 <!-- un-comment this line once the vignettes are added  -->
 
 ## Utility
 
-The function `sandClay.mixCalcs` is supplied for generating the air-dry masses of soil to use when batch-blending sand-clay mixtures. It is a relatively simple solution to a 2-member system of equations which accounts for the hygroscopic water content of each soil and its respective % sand-size particles. The user may choose any desired final % sand and so long as the water contents of each soil are known, the final mixture will contain the desired sand % on an oven-dry mass basis. 
+The function `calculate_mix_wts` is supplied for generating the air-dry masses of soil to use when batch-blending sand-clay mixtures. It is a relatively simple solution to a 2-member system of equations which accounts for the hygroscopic water content of each soil and their respective % sand-size particles. The user may choose any desired final % sand, and (so long as the water contents of each soil are known), the final mixture will contain the desired % sand on an oven-dry mass basis. 
 
 The standardized soil tests which may be deployed using this package include: 
 
