--- a/README.Rmd
+++ b/README.Rmd
@@ -13,21 +13,19 @@ knitr::opts_chunk$set(
 )
 ```
 
-# diRtscience
-
 <!-- badges: start -->
 [![Lifecycle: maturing](https://img.shields.io/badge/lifecycle-maturing-blue.svg)](https://www.tidyverse.org/lifecycle/#maturing)
 <!-- badges: end -->
 
-## Note: I am still in the process of tweaking a few functions. The package should be fully updated by Nov 1. 2020 .
+#### \*\* *Note: I am still in the process of tweaking a few functions. The package should be fully updated by Nov 1. 2020 .* *\*
 
 
 ## Installation
 
-An official version of `diRtscience` is not yet available on CRAN. However, if you have the `devtools` package, you can install `diRtscience` with the command:
+An official version of `diRtscience` is not yet available on CRAN. However, if you have `devtools` or `remotes` installed, you can install it with the command:
 
 ``` r
-devtools::install_github("evanmascitti/diRtscience")
+remotes::install_github("evanmascitti/diRtscience")
 ```
 
 This package contains concise functions to analyze laboratory soil test data. I wrote this package for my own use but other soil scientists may find it of value. The code encompasses several commonly performed tests (including particle size analysis, Proctor maximum density, and Atterberg limits) and specialized analyses that were developed specifically for this project. Examples include 3D morphometric analyses of soil surfaces and numerical integration of stress-strain curves derived from unconfined compression tests. 
@@ -37,7 +35,18 @@ This package contains concise functions to analyze laboratory soil test data. I 
 
 ## Utility
 
-The function `calculate_mix_wts` is supplied for generating the air-dry masses of soil to use when batch-blending sand-clay mixtures. It is a relatively simple solution to a 2-member system of equations which accounts for the hygroscopic water content of each soil and their respective % sand-size particles. The user may choose any desired final % sand, and (so long as the water contents of each soil are known), the final mixture will contain the desired % sand on an oven-dry mass basis. 
+Brief descriptions of each function:
+
+**mix_calcs**: Precise calculations for sand-clay soil mixtures
+
+**compaction_aliquots**: Specimen preparation for Proctor compaction tests
+
+**proctor_fit**: Fit a compaction curve and compute the optimum water content and maximum density. 
+
+**add_w**: Calculate gravimetric water content and add to an existing data frame
+
+
+## Methods included 
 
 The standardized soil tests which may be deployed using this package include: 
 
