--- a/README.Rmd
+++ b/README.Rmd
@@ -37,13 +37,13 @@ This package contains concise functions to analyze laboratory soil test data. I 
 
 Brief descriptions of each function:
 
-**mix_calcs**: Precise calculations for sand-clay soil mixtures
+`mix_calcs`: Precise calculations for sand-clay soil mixtures
 
-**compaction_aliquots**: Specimen preparation for Proctor compaction tests
+`compaction_aliquots`: Specimen preparation for Proctor compaction tests
 
-**proctor_fit**: Fit a compaction curve and compute the optimum water content and maximum density. 
+`proctor_fit`: Fit a compaction curve and compute the optimum water content and maximum density. 
 
-**add_w**: Calculate gravimetric water content and add to an existing data frame
+`add_w`: Calculate gravimetric water content and add to an existing data frame
 
 
 ## Methods included 
