--- a/README.Rmd
+++ b/README.Rmd
@@ -17,25 +17,26 @@ knitr::opts_chunk$set(
 [![Lifecycle: maturing](https://img.shields.io/badge/lifecycle-maturing-blue.svg)](https://www.tidyverse.org/lifecycle/#maturing)
 <!-- badges: end -->
 
-#### \*\* *Note: I am still in the process of tweaking a few functions. The package should be fully updated by Nov 1. 2020 .* *\*
+## Disclaimer 
+To other soil scientists: Please do not label me a heretic simply from the package name. I too appreciate the complexity and beauty of natural soil bodies andI am fully aware of connotations associated with those who use the "d-word". In this sense, the package name is a bit tongue-in-cheek; I wrote the code for my PhD project on baseball infield soils, and in baseball, like it or not, the infield skin is called "dirt."
 
+## Utility
+This package contains concise functions to analyze laboratory soil test data. I wrote this package for my own use but other soil scientists may find it of value. The code encompasses several commonly performed tests (including particle size analysis, Proctor maximum density, and Atterberg limits) and specialized analyses that were developed specifically for this project. Examples include 3D morphometric analyses of soil surfaces and numerical integration of stress-strain curves derived from unconfined compression tests. 
 
 ## Installation
 
-An official version of `diRtscience` is not yet available on CRAN. However, if you have `devtools` or `remotes` installed, you can install it with the command:
+An official version of `diRtscience` is not yet available on CRAN. However, like other packages on GitHub, you can install it with `devtools` or `remotes`:
 
 ``` r
 remotes::install_github("evanmascitti/diRtscience")
 ```
 
-This package contains concise functions to analyze laboratory soil test data. I wrote this package for my own use but other soil scientists may find it of value. The code encompasses several commonly performed tests (including particle size analysis, Proctor maximum density, and Atterberg limits) and specialized analyses that were developed specifically for this project. Examples include 3D morphometric analyses of soil surfaces and numerical integration of stress-strain curves derived from unconfined compression tests. 
-
 <!-- The best way to learn about this package is through the vignettes  -->
 <!-- un-comment this line once the vignettes are added  -->
 
-## Utility
+## Functions 
 
-Brief descriptions of each function:
+Below are terse descriptions of each function's purpose:
 
 `mix_calcs()`: Precise calculations for sand-clay soil mixtures
 
@@ -50,7 +51,7 @@ Brief descriptions of each function:
 `add_w()`: Calculate gravimetric water content and add to an existing data frame
 
 
-## Methods included 
+## Standard method references
 
 The standardized soil tests which may be deployed using this package include: 
 
