--- a/README.Rmd
+++ b/README.Rmd
@@ -14,13 +14,24 @@ knitr::opts_chunk$set(
 ```
 
 <!-- badges: start -->
-[![Lifecycle: maturing](https://img.shields.io/badge/lifecycle-maturing-blue.svg)](https://www.tidyverse.org/lifecycle/#maturing)
+
+```{r, echo = FALSE}
+version <- as.vector(read.dcf('DESCRIPTION')[, 'Version'])
+version <- gsub('-', '.', version)                          
+```
+[![Project Status: Active – The project has reached a stable, usable state and is being actively developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
+[![packageversion](https://img.shields.io/badge/Package%20version-`r version`-orange.svg?style=flat-square)](commits/master)
+[![Last-changedate](https://img.shields.io/badge/last%20change-`r gsub('-', '--', Sys.Date())`-yellowgreen.svg)](/commits/master)
+
 <!-- badges: end -->
 
+
 ## Disclaimer 
-To other soil scientists: Please do not label me a heretic simply from the package name. I too appreciate the complexity and beauty of natural soil bodies andI am fully aware of connotations associated with those who use the "d-word". In this sense, the package name is a bit tongue-in-cheek; I wrote the code for my PhD project on baseball infield soils, and in baseball, like it or not, the infield skin is called "dirt."
+
+To other soil scientists: Please do not label me a heretic simply from the package name. I too appreciate the complexity and beauty of natural soil bodies, and I am fully aware of connotations associated with those who use the "d-word". In this sense, the package name is a bit tongue-in-cheek; I wrote the code for my PhD project on baseball infield soils, and in baseball, like it or not, the infield skin is called "dirt."
 
 ## Utility
+
 This package contains concise functions to analyze laboratory soil test data. I wrote this package for my own use but other soil scientists may find it of value. The code encompasses several commonly performed tests (including particle size analysis, Proctor maximum density, and Atterberg limits) and specialized analyses that were developed specifically for this project. Examples include 3D morphometric analyses of soil surfaces and numerical integration of stress-strain curves derived from unconfined compression tests. 
 
 ## Installation
@@ -64,4 +75,4 @@ The standardized soil tests which may be deployed using this package include:
 * Modified effort: [ASTM D1557-12e1](https://www.astm.org/Standards/D1557)
 
 #### Atterberg limits 
-* [ASTM D4318-17e1](https://www.astm.org/Standards/D4318)
+* Canonical thread-rolling/Casagrande cup: [ASTM D4318-17e1](https://www.astm.org/Standards/D4318)
