added function for plotting phase diagrams

--- a/README.Rmd
+++ b/README.Rmd
@@ -59,7 +59,15 @@ Below are one-line overviews of each function's purpose:
 
 `w_opt()` Fit a compaction curve and compute the optimum water content only. 
 
-`compute_LL()` calculate the liquid limit from water contents and blow counts 
+[`compute_LL()`](R/compute_LL.R) calculate the liquid limit from water contents and blow counts
+
+[`LL_batch_analysis()`](R/LL_batch_analysis.R) calculate liquid limit of all specimens tested in a batch
+
+[`PL_batch_analysis()`](R/PL_batch_analysis.R) calculate plastic limit of all specimens tested in a batch
+
+[`AL_batch_analysis()`](R/AL_batch_analysis.R) calculate adhesion limit of all specimens tested in a batch
+
+[`pipette_analysis()`](R/pipette_analysis.R) analyze pipette and sieve data for one or more samples
 
 
 ### Visualization 
@@ -70,6 +78,12 @@ Below are one-line overviews of each function's purpose:
 
 `casagrande_chart()` display Atterberg limits on the traditional LL vs PI scatterplot, with U-line and A-line plotted
 
+[`ggpsd()`](R/ggpsd.R) plot one or more particle size distributions
+
+[`ggpsd_single_sample()`](ggpsd_single_sample.R.R) plot particle size distributions for a single specimen
+
+[`ggphase_diagram()`](R/gg_phase_diargam.R) plot solid, liquid, and gaseous phases of a sand-clay mix
+
 
 ### Data managmement and reference sheets
 
@@ -79,11 +93,9 @@ Below are one-line overviews of each function's purpose:
 
 `generate_proctor_datasheet()` 
 
-`new_PL_datasheet()`
+[`pipette_datasheets()`](R/pipette_datasheets.R) creates .csv data sheets for the different types of data required in this analysis
 
-`new_LL_datasheet()`
-
-`new_pipette_datasheets()` *creates multiple sheets for the different types of data required in this analysis
+[`att_lims_datasheets()`](R/att_lims_datasheets.R) creates .csv data sheets for liquid, adhesion, and plastic limit tests
 
 
 ## Standard method references
